- urpmf, urpmq:
  o fix using xml info files with quotes in medium name
- urpmi
  o do not compute orphan packages when handling priority upgrades
  o disable dudf support (we've nothing server side)
  o fix checking available space of mount point (mga#1342)

Version 6.42 - 05 November 2011

- urpmi.addmedia:
  o do not pick rsync medium if rsync is not installed (mga#3557)
- urpmi.update:
  o document that -a only works on enabled media (mga#3190)

Version 6.41 - 14 October 2011

- add infrastructure for rpmdrake (#920)
- add infrastructure so that GUIes can offer not to ask anymore about missing
  or bad packages
- fix broken 'urpmi --no-md5sum' (pok, mga#62557)
- use rsync to download from rsync-mirrors (Alexander Barakin, mga#2518)

Version 6.40 - 07 May 2011

- compress sources with xz instead of bzip2
- fix (g)urpmi --auto-select --update defaulting to all media when
  there're no update media (#1024)

Version 6.39 - 21 November 2010

- install zeroconf documentation and example files.
- resurrect urpmi.recover now that the required functionality has been brought
  back with rpm5.

Version 6.38 - 18 June 2010

- add --zeroconf support in urpmi.addmedia

Version 6.37 - 28 May 2010
- urpmq
  o fix listing of groups when listing all packages (also fixes #59321)

Version 6.36 - 26 May 2010

- urpmq
  o allow to use -g with --list

Version 6.35 - 23 April 2010

- urpmi.addmedia:
  o disable non-free repository by default for Free edition (#40033)
-urpmi:
  o when using --update, allow package dependencies to be fetched from
    non-update media (#51268)
  o don't confuse media/media keys when a package is available from different
    media (eg CDROM/network)

Version 6.34 - 25 January 2010

- don't crash when parsing an invalid media.cfg file in
  /etc/urpmi/mediacfg.d
- fix being unable to run a second transaction set in rpmdrake (#54842)

Version 6.33 - 12 January 2010

- invalidate mirror list cache when it's an old format (ie one which does not 