@@ -4,6 +4,7 @@
   o do not compute orphan packages when handling priority upgrades
   o disable dudf support (we've nothing server side)
   o fix checking available space of mount point (mga#1342)
+  o fix reading unrequested packages list when chrooted
 
 Version 6.42 - 05 November 2011
 
